make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <!-- BODY -->
 
 <body>
+
+  <!-- SIDEBAR -->
+
+  <!-- CONTENT -->
   <div>
     <img src="images/LeWagon.jpg" alt="Profile Picture" id="profile_picture">
     <h1>Daniel Tridico</h1>
